2017-02-24  Bruno Haible  <bruno@clisp.org>

	Fix build failure on non-glibc platforms.
	* utils/*.c: Include <config.h>.
	* src/makemake.in (UTILS, hardcode): Compile with option "-I.".
	Reported by Sam Steingold.

2017-02-24  Bruno Haible  <bruno@clisp.org>

	Modernize: Remove leftover of obsolete Atari ST charset conversion.
	* makemake.in (CHSCONVERT, CHSCONVERT_FILTER): Remove variables.

2017-02-24  Bruno Haible  <bruno@clisp.org>

	Fix clang warning "'-falign-functions=4' is not supported" on Mac OS X.
	* makemake.in (XCC_BRAND): Set to 'clang' also for the system compiler
	on Mac OS X 10.11.
	Reported by Sam Steingold.

2017-02-24  Bruno Haible  <bruno@clisp.org>

	maint: Update download of ansi-tests.
	* Makefile.devel (ANSITESTS_REPO): New variable.
	(ANSITESTS_SVN): Remove variable.
	(update-ansi-tests): Use git instead of svn.

2017-02-22  Bruno Haible  <bruno@clisp.org>

	maint: Structure Makefile.devel.
	* Makefile.devel: Reorganize in sections and subsections.

2017-02-21  Bruno Haible  <bruno@clisp.org>

	Update libsigsegv download location.
	* configure (libsigsegv_url): Use the official download location.

2017-02-20  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux/arm.
	* makemake.in (ARI_ASMD): Treat cpu 'armhf' like 'arm'.

2017-02-20  Bruno Haible  <bruno@clisp.org>

	Fix syntax errors in makemake.in (regression from 2010-07-13).
	* makemake.in: Add ';;' before 'esac'.

2017-02-20  Bruno Haible  <bruno@clisp.org>

	Remove obsolete file.
	* unix/sigsegv.c: Remove file. Obsoleted by the libsigsegv package.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Remove the assembly-language optimizations for m68k.
	They are bitrotten, since Linux/m68k is dead. Modern m68k variants
	probably have different performance characteristics than the 68020.
	* ari68020.d: Remove file.
	* makemake.in (ARI_ASMD, ARI_ASMS, ARI_ASMC): Simplify accordingly.
	* arilev1.d: Likewise.
	* arilev0.d (sign_of_sint32, sign_of_sint16, high16, highlow32,