@@ -1,3 +1,10 @@
+2017-02-25  Bruno Haible  <bruno@clisp.org>
+
+	configure: Give some advice when libffcall is not found.
+	* m4/ffcall.m4 (CL_FFCALL): If not found, set cl_cv_have_ffcall to
+	'no, consider installing GNU libffcall'.
+	* configure: Adjust accordingly.
+
 2017-02-24  Bruno Haible  <bruno@clisp.org>
 
 	Fix build failure on non-glibc platforms.
